added wiki and fixed VCT